# FlowFree-CLI

./: .gitignore  BoolExpr.cpp  BoolExpr.hpp  CMakeLists.txt  CMakeSettings.json  README.md  Solver.cpp  Solver.hpp  main.cpp
lib/minisat/: .gitlab-ci.yml  CMakeLists.txt  README.md  conanfile.py
lib/minisat/minisat/core/: Main.cc  OutOfMemoryException.cc  OutOfMemoryException.h  Solver.cc  SolverTypes.h  ThrowOOMException.cc  ThrowOOMException.h
lib/minisat/minisat/mtl/: Alloc.h  Vec.h  XAlloc.h
lib/minisat/minisat/simp/: Main.cc
lib/minisat/minisat/utils/: ParseUtils.h
